Improving code quality and fixing findbugs issues